# perseus

./: .gitignore  .gitmodules  README.md  gtsam_scratch.ipynb  pyproject.toml  requirements.txt  scratch.ipynb  scratch2.ipynb  setup.py
data/: merge_hdf5.py  prune_dataset.py  visualize_data.py  visualize_segmentation_ratios.py
data_generation/: custom_renderer.py  data_utils.py  generate_all_videos.py  generate_and_label_keypoints.py  generate_one_video.py  local_asset_source.py
data_generation/assets/: mjc.blend  mjc.glb  mjc.mtl  mjc.urdf
perseus/: zed_scratch.ipynb  zed_scratch.py  zed_smoother.py
perseus/detector/: augmentations.py  data.py  loss.py  models.py  train.py  train_yolo_nas.py  utils.py  validate.py  validate_real.py
perseus/smoother/: base.py  base_v2.py  factors.py  utils.py
scripts/: prune_dataset.py  streaming.py  visualize_augmentations.py  visualize_data.py  visualize_segmentation_ratios.py
tests/: test_dynamics_factor.py
