[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perseus"
version = "0.0.1"
description = "A state estimator for cube rotation built on Kubric."
authors = [
    { name = "Preston Culbertson", email = "pculbert@caltech.edu" },
    { name = "Albert H. Li", email = "alberthli@caltech.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
urls = { "Homepage" = "https://github.com/pculbertson/perseus" }
dependencies = [
    "numpy>=1.26.3",
    "torch>=2.1.1",
    "torchvision>=0.16.2",
    "kornia>=0.7.1",
    "gtsam>=4.2",
    "opencv-python>=4.9.0.80",
    "pyqt5>=5.15.10",
    "pyqtgraph>=0.13.3",
    "tyro>=0.5.7",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",
    "qasync>=0.27.1",
    "pypose>=0.6.7",
]

[tool.hatch.build.targets.wheel]
include = ["perseus*"]
